[package]
name = "aws-sg-util"
version = "0.1.0"
authors = ["Jonathan Constantinides <jonleecon@gmail.com>"]

[dependencies]
clap = "2.33.0"
rusoto_core = { version = "0.40.0", default_features = false, features=["rustls"] }
rusoto_ec2 = { version = "0.40.0", default_features = false, features=["rustls"] }
failure = "0.1.5"
csv = "1.1.1"
trust-dns = "0.17.0"
regex = "1.2.1"

[profile.release]
lto = true