[package]
name = "aws-sg-util"
version = "0.1.0"
authors = ["Jonathan Constantinides <jonleecon@gmail.com>"]

[dependencies]
clap = "2.33.0"
rusoto_core = { version = "0.42.0", default_features = false, features=["rustls"] }
rusoto_ec2 = { version = "0.42.0", default_features = false, features=["rustls"] }
failure = "0.1.6"
csv = "1.1.3"
trust-dns-client = "0.19.2"
regex = "1.3.4"

[profile.release]
lto = true
opt-level=3